--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MERN STACK course",
   "main": "server.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "express-validator": "^6.11.1",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
